--- a/elegant_blur_landing/style.css
+++ b/elegant_blur_landing/style.css
@@ -9,7 +9,7 @@ body {
     content: '';
     height: 100vh;
     width: 100%;
-    background-image: url(https://image.ibb.co/gzOBup/showcase.jpg);
+    background-image: url(./img/apple-black-and-white-black-and-white-169573.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
