--- a/responsive_navbar/style.css
+++ b/responsive_navbar/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px;
-    padding: 0 px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -40,6 +40,7 @@ nav {
 
 .burger {
     display:none;
+    cursor: pointer;
 }
 
 .burger div {
@@ -47,6 +48,7 @@ nav {
     height: 3px;
     background-color: rgb(226,226,226);
     margin: 5px;
+    transition: all 0.3s ease;
 }
 
 @media screen and (max-width:1024px) {
@@ -69,7 +71,7 @@ nav {
         flex-direction: column;
         align-items: center;
         width: 50%;
-        transform: translatex(100%);
+        transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
 
@@ -84,16 +86,26 @@ nav {
 }
 
 .nav-active {
-    transform: translatex(0%);
+    transform: translateX(0%);
 }
 
 @keyframes navLinkFade {
     from {
         opacity: 0;
-        transform: translatex(50px);
+        transform: translateX(50px);
     }
     to {
         opacity: 1;
-        transform: translatex(0px);
+        transform: translateX(0px);
     }
+}
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
 }
