--- a/sliding_signinup/style.css
+++ b/sliding_signinup/style.css
@@ -113,6 +113,7 @@ input {
 	z-index: 2;
 }
 
+/* move sign-in to the right */
 .container.right-panel-active .sign-in-container {
 	transform: translateX(100%);
 }
@@ -124,6 +125,7 @@ input {
 	z-index: 1;
 }
 
+/* bring sign-up over sign-in */
 .container.right-panel-active .sign-up-container {
 	transform: translateX(100%);
 	opacity: 1;
@@ -154,6 +156,7 @@ input {
 	z-index: 100;
 }
 
+/* move overlay to left */
 .container.right-panel-active .overlay-container{
 	transform: translateX(-100%);
 }
@@ -174,6 +177,7 @@ input {
 	transition: transform 0.6s ease-in-out;
 }
 
+/* move overlay back to right */
 .container.right-panel-active .overlay {
   	transform: translateX(50%);
 }
