--- a/portfolio_website/scss/_utilities.scss
+++ b/portfolio_website/scss/_utilities.scss
@@ -41,7 +41,20 @@ button[class^='btn-']:hover, a[class^='btn-']:hover, input[class^='btn-']:hover 
 // Backgrounds
 .bg {
     &-main {
-        
+        background: $main-color;
+        color: set-text-color($main-color);
+    }
+    &-dark {
+        background: $dark-color;
+        color: set-text-color($dark-color);
+    }
+    &-light {
+        background: $light-color;
+        color: set-text-color($light-color);
+    }
+    &-medium {
+        background: $medium-color;
+        color: set-text-color($medium-color);
     }
 }
 
